# CS338-AVSR

./: .gitignore  =0.5.12  README.md  architecture.md  main.py  pyproject.toml  requirements.txt
configs/: eval.yaml  eval_2.yaml  eval_base.yaml  eval_base_pho.yaml  eval_noise.yaml  train.yaml  train_pho.yaml
core/: __init__.py  checkpoint.py  data.py  hf_cache.py  inference.py  metrics.py  model.py  preprocessing.py  train.py
core/labeling/: label_phowhisper_yoloface.py
scripts/: augment_dataset.py  clean_augmented.py  eval.py  inference.py  split_dataset.py  train.py
test/: test_training_smoke.py
